SUBDIRS = . ctrl util platform 

# Use 'ls -alh *.h | cut -c45-' to save a lot of copy & paste work :)

myincludedir = $(includedir)/agg2
myinclude_HEADERS = \
	agg_alpha_mask_u8.h          agg_line_aa_basics.h            agg_span_image_filter_gray.h \
	agg_arc.h                    agg_math.h                      agg_span_image_filter_rgb.h \
	agg_array.h                  agg_math_stroke.h               agg_span_image_filter_rgba.h \
	agg_arrowhead.h              agg_path_storage.h              agg_span_image_resample.h \
	agg_basics.h                 agg_path_storage_integer.h      agg_span_image_resample_gray.h \
	agg_bezier_arc.h             agg_pattern_filters_rgba.h      agg_span_image_resample_rgb.h \
	agg_bitset_iterator.h        agg_pixfmt_amask_adaptor.h      agg_span_image_resample_rgba.h \
	agg_bounding_rect.h          agg_pixfmt_gray.h               agg_span_interpolator_adaptor.h \
	agg_bspline.h                agg_pixfmt_rgb.h                agg_span_interpolator_linear.h \
	agg_clip_liang_barsky.h      agg_pixfmt_rgb_packed.h         agg_span_interpolator_persp.h \
	agg_color_gray.h             agg_pixfmt_rgba.h               agg_span_interpolator_trans.h \
	agg_color_rgba.h             agg_rasterizer_outline.h        agg_span_pattern.h \
	agg_config.h                 agg_rasterizer_outline_aa.h     agg_span_pattern_filter_gray.h \
	agg_conv_adaptor_vcgen.h     agg_rasterizer_scanline_aa.h    agg_span_pattern_filter_rgb.h \
	agg_conv_adaptor_vpgen.h     agg_render_scanlines.h          agg_span_pattern_filter_rgba.h \
	agg_conv_bspline.h           agg_renderer_base.h             agg_span_pattern_resample_gray.h \
	agg_conv_clip_polygon.h      agg_renderer_markers.h          agg_span_pattern_resample_rgb.h \
	agg_conv_clip_polyline.h     agg_renderer_mclip.h            agg_span_pattern_resample_rgba.h \
	agg_conv_close_polygon.h     agg_renderer_outline_aa.h       agg_span_pattern_rgb.h \
	agg_conv_concat.h            agg_renderer_outline_image.h    agg_span_pattern_rgba.h \
	agg_conv_contour.h           agg_renderer_primitives.h       agg_span_solid.h \
	agg_conv_curve.h             agg_renderer_raster_text.h      agg_span_subdiv_adaptor.h \
	agg_conv_dash.h              agg_renderer_scanline.h         agg_trans_affine.h \
	agg_conv_gpc.h               agg_rendering_buffer.h          agg_trans_bilinear.h \
	agg_conv_marker.h            agg_rendering_buffer_dynarow.h  agg_trans_double_path.h \
	agg_conv_marker_adaptor.h    agg_rounded_rect.h              agg_trans_lens.h \
	agg_conv_segmentator.h       agg_scanline_bin.h              agg_trans_perspective.h \
	agg_conv_shorten_path.h      agg_scanline_boolean_algebra.h  agg_trans_single_path.h \
	agg_conv_smooth_poly1.h      agg_scanline_p.h                agg_trans_viewport.h \
	agg_conv_stroke.h            agg_scanline_storage_aa.h       agg_trans_warp_magnifier.h \
	agg_conv_transform.h         agg_scanline_storage_bin.h      agg_vcgen_bspline.h \
	agg_conv_unclose_polygon.h   agg_scanline_u.h                agg_vcgen_contour.h \
	agg_curves.h                 agg_shorten_path.h              agg_vcgen_dash.h \
	agg_dda_line.h               agg_simul_eq.h                  agg_vcgen_markers_term.h \
	agg_ellipse.h                agg_span_allocator.h            agg_vcgen_smooth_poly1.h \
	agg_ellipse_bresenham.h      agg_span_converter.h            agg_vcgen_stroke.h \
	agg_embedded_raster_fonts.h  agg_span_generator.h            agg_vcgen_vertex_sequence.h \
	agg_font_cache_manager.h     agg_span_gouraud.h \
	agg_gamma_functions.h        agg_span_gouraud_gray.h         agg_vertex_sequence.h \
	agg_gamma_lut.h              agg_span_gouraud_rgba.h         agg_vpgen_clip_polygon.h \
	agg_glyph_raster_bin.h       agg_span_gradient.h             agg_vpgen_clip_polyline.h \
	agg_gsv_text.h               agg_span_gradient_alpha.h       agg_vpgen_segmentator.h \
	agg_image_filters.h          agg_span_image_filter.h
