INCLUDES = -I$(top_srcdir)/include

noinst_LTLIBRARIES = libaggctrl.la

libaggctrl_la_LDFLAGS = -version-info 2:1:0
libaggctrl_la_SOURCES = agg_cbox_ctrl.cpp agg_gamma_ctrl.cpp agg_gamma_spline.cpp agg_rbox_ctrl.cpp \
						agg_slider_ctrl.cpp agg_spline_ctrl.cpp agg_scale_ctrl.cpp \
						agg_bezier_ctrl.cpp agg_polygon_ctrl.cpp 
