python_sources = [
  '__init__.py',
  '_markers.py',
  'compare.py',
  'conftest.py',
  'decorators.py',
  'exceptions.py',
  'widgets.py',
]

typing_sources = [
  '__init__.pyi',
  'compare.pyi',
  'conftest.pyi',
  'decorators.pyi',
  'widgets.pyi',
]

py3.install_sources(python_sources, typing_sources,
                    subdir: 'matplotlib/testing')

subdir('jpl_units')
