python_sources = [
  '__init__.py',
  'conftest.py',
  'test_afm.py',
  'test_agg_filter.py',
  'test_agg.py',
  'test_animation.py',
  'test_api.py',
  'test_arrow_patches.py',
  'test_artist.py',
  'test_axes.py',
  'test_axis.py',
  'test_backend_bases.py',
  'test_backend_cairo.py',
  'test_backend_gtk3.py',
  'test_backend_macosx.py',
  'test_backend_nbagg.py',
  'test_backend_pdf.py',
  'test_backend_pgf.py',
  'test_backend_ps.py',
  'test_backend_qt.py',
  'test_backends_interactive.py',
  'test_backend_svg.py',
  'test_backend_template.py',
  'test_backend_tk.py',
  'test_backend_tools.py',
  'test_backend_webagg.py',
  'test_basic.py',
  'test_bbox_tight.py',
  'test_category.py',
  'test_cbook.py',
  'test_collections.py',
  'test_colorbar.py',
  'test_colors.py',
  'test_compare_images.py',
  'test_constrainedlayout.py',
  'test_container.py',
  'test_contour.py',
  'test_cycles.py',
  'test_dates.py',
  'test_datetime.py',
  'test_determinism.py',
  'test_doc.py',
  'test_dviread.py',
  'test_figure.py',
  'test_fontconfig_pattern.py',
  'test_font_manager.py',
  'test_ft2font.py',
  'test_getattr.py',
  'test_gridspec.py',
  'test_image.py',
  'test_legend.py',
  'test_lines.py',
  'test_marker.py',
  'test_mathtext.py',
  'test_matplotlib.py',
  'test_mlab.py',
  'test_offsetbox.py',
  'test_patches.py',
  'test_patheffects.py',
  'test_path.py',
  'test_pickle.py',
  'test_png.py',
  'test_polar.py',
  'test_preprocess_data.py',
  'test_pyplot.py',
  'test_quiver.py',
  'test_rcparams.py',
  'test_sankey.py',
  'test_scale.py',
  'test_simplification.py',
  'test_skew.py',
  'test_sphinxext.py',
  'test_spines.py',
  'test_streamplot.py',
  'test_style.py',
  'test_subplots.py',
  'test_table.py',
  'test_testing.py',
  'test_texmanager.py',
  'test_textpath.py',
  'test_text.py',
  'test_ticker.py',
  'test_tightlayout.py',
  'test_transforms.py',
  'test_triangulation.py',
  'test_ttconv.py',
  'test_type1font.py',
  'test_units.py',
  'test_usetex.py',
  'test_widgets.py',
]

py3.install_sources(python_sources,
                    subdir: 'matplotlib/tests')

install_data(
  'README',
  'Courier10PitchBT-Bold.pfb',
  'cmr10.pfb',
  'mpltest.ttf',
  'test_nbagg_01.ipynb',
  install_tag: 'tests',
  install_dir: py3.get_install_dir(subdir: 'matplotlib/tests/'))

install_subdir(
  'baseline_images',
  install_tag: 'tests',
  install_dir: py3.get_install_dir(subdir: 'matplotlib/tests'))
install_subdir(
  'tinypages',
  install_tag: 'tests',
  install_dir: py3.get_install_dir(subdir: 'matplotlib/tests'))
