python_sources = [
  '__init__.py',
  '_triangulation.py',
  '_tricontour.py',
  '_trifinder.py',
  '_triinterpolate.py',
  '_tripcolor.py',
  '_triplot.py',
  '_trirefine.py',
  '_tritools.py',
]

typing_sources = [
  '_triangulation.pyi',
  '_tricontour.pyi',
  '_trifinder.pyi',
  '_triinterpolate.pyi',
  '_tripcolor.pyi',
  '_triplot.pyi',
  '_trirefine.pyi',
  '_tritools.pyi',
]

py3.install_sources(python_sources, typing_sources,
                    subdir: 'matplotlib/tri')
