python_sources = [
  '__init__.py',
  'angle_helper.py',
  'axes_divider.py',
  'axes_grid.py',
  'axes_rgb.py',
  'axis_artist.py',
  'axislines.py',
  'axisline_style.py',
  'floating_axes.py',
  'grid_finder.py',
  'grid_helper_curvelinear.py',
  'parasite_axes.py',
]

py3.install_sources(python_sources, subdir: 'mpl_toolkits/axisartist')

subdir('tests')
