python_sources = [
  '__init__.py',
  'Duration.py',
  'EpochConverter.py',
  'Epoch.py',
  'StrConverter.py',
  'UnitDblConverter.py',
  'UnitDblFormatter.py',
  'UnitDbl.py',
]

typing_sources = [
]

py3.install_sources(python_sources, typing_sources,
                    subdir: 'matplotlib/testing/jpl_units')
